


<resources>
    <string name="app_name">ImcApp</string> <!-- aparece nombre de la App-->
<string name="texto_etiqueta_peso"> Proporcione el peso en kilogramos</string> <!-- la app pide que ingresar datos-->
<string name="texto_etiqueta_estatura">Proporcione la estatura en metros: </string>
    <string name="texto_boton_calcular">Calcular</string> <!-- despues de ingresar datos opcion calcular-->
    <string name="texto_boton_limpiar">Limpiar</string> <!-- aparece opción de limpiar los dos campos requeridos-->
<string name="texto_etiqueta_resultado">El Indice de Masa Corporal (IMC) es:</string> <!-- proporciona el resultado del calculo de IMC-->




</resources>

